--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,10 @@ services:
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: admin
       SPRING_DEVTOOLS_RESTART_ENABLED: "true"
+      MP_ACCESS_TOKEN: "APP_USR-5776470819795291-052622-9d0e16330f82db26018b57af9f373d82-2461182756"
+      MP_USER_ID: "2461182756"
+      MP_EXTERNAL_POS_ID: "113730756"
+
     volumes:
       - ./:/app
     working_dir: /app
