--- a/k8s/deployment-api.yaml
+++ b/k8s/deployment-api.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lanchonete-api
+  name: challenge-fiap-api
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: lanchonete-api
+      app: challenge-fiap-api
   template:
     metadata:
       labels:
-        app: lanchonete-api
+        app: challenge-fiap-api
     spec:
       containers:
         - name: api
-          image: lanchonete_app
+          image: challenge-fiap-api:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -27,5 +27,7 @@ spec:
             httpGet:
               path: /api/actuator/health
               port: 8080
-            initialDelaySeconds: 5
+            initialDelaySeconds: 20
             periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 6
