--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://mysql:3306/lanchonete?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
-management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=*
+management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
 #jwt
