--- a/k8s/deployment-api.yaml
+++ b/k8s/deployment-api.yaml
@@ -23,3 +23,10 @@ spec:
                 name: app-config
             - secretRef:
                 name: app-secrets
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 250m
+              memory: 512Mi
