--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -3,7 +3,7 @@ name: CI - Build and Push Docker Image to ECR
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
