--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version> </properties>
+		<java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,9 +44,8 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.6</version> </dependency>
-
-
+			<version>2.8.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -89,8 +90,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-jackson</artifactId> <!-- ou jjwt-gson -->
-			<version>0.11.5</version>
+			<artifactId>jjwt-jackson</artifactId> <version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
