Update CI workflow to include EKS deployment steps

--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -1,4 +1,4 @@
-name: CI - Build and Push Docker Image to ECR
+name: CI/CD - Build, Push Docker Image to ECR, and Deploy to EKS
 
 on:
   push:
@@ -7,8 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
-    name: Build and Push to ECR
+  build-push-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,13 +32,14 @@ jobs:
           ECR_REPOSITORY: lanchonete-app
           IMAGE_TAG: latest
         run: |
-          # Constrói o nome completo da imagem
           IMAGE_NAME=${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
-          
-          echo "Building and pushing image: $IMAGE_NAME"
-          
-          # Constrói a imagem Docker com o nome completo
           docker build -t $IMAGE_NAME -f docker/Dockerfile .
-          
-          # Envia a imagem para o ECR
           docker push $IMAGE_NAME
+
+      - name: Update kubeconfig for EKS
+        run: |
+          aws eks --region us-east-1 update-kubeconfig --name fiap-lanchonete-eks
+
+      - name: Deploy to EKS
+        run: |
+          kubectl apply -f k8s/lanchonete-app-deployment.yaml
