--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -42,4 +42,8 @@ jobs:
 
       - name: Deploy to EKS
         run: |
+          kubectl apply -f k8s/lanchonete-app-deployment.yaml
+
+      - name: Deploy to configs
+        run: |
           kubectl apply -f k8s/
