--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -40,6 +40,10 @@ jobs:
         run: |
           aws eks --region us-east-1 update-kubeconfig --name fiap-lanchonete-eks
 
+      - name: Delete old Deployment (to avoid immutable field error)
+        run: |
+          kubectl delete deployment lanchonete-app --ignore-not-found
+
       - name: Deploy to EKS
         run: |
-          kubectl apply -f k8s/lanchonete-app-deployment.yaml
+          kubectl apply -f k8s/
