--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-# Configurações para o ambiente de teste
+# Configuraï¿½ï¿½es para o ambiente de teste
 
-# Configuração do H2 DataSource (geralmente autoconfigurado se H2 está no classpath com escopo de teste)
+# Configuraï¿½ï¿½o do H2 DataSource (geralmente autoconfigurado se H2 estï¿½ no classpath com escopo de teste)
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -10,10 +10,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Faz o Hibernate criar o schema automaticamente para testes
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# Desabilita a inicialização de dados via schema.sql ou data.sql para testes.
+# Desabilita a inicializaï¿½ï¿½o de dados via schema.sql ou data.sql para testes.
 spring.sql.init.mode=never
 
-# Para mostrar SQL gerado (opcional, útil para debug)
+# Para mostrar SQL gerado (opcional, ï¿½til para debug)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -29,3 +29,6 @@ MP_ACCESS_TOKEN= MP_ACCESS_TOKEN
 MP_USER_ID= MP_USER_ID
 MP_EXTERNAL_POS_ID= MP_EXTERNAL_POS_ID
 MP_WEBHOOK=MP_WEBHOOK
+
+# ConfiguraÃ§Ã£o JWT para testes
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-test.auth0.com/
