--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,9 @@
     </scm>
     <properties>
         <java.version>21</java.version>
-        <sonar.projectKey>fiap-challenge-group-52_challenge-fiap-app</sonar.projectKey>
-        <sonar.organization>fiap-challenge-group-52</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.sources>src/main/java</sonar.sources>
         <sonar.tests>src/test/java</sonar.tests>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
@@ -152,11 +148,6 @@
                 <version>5.5.0.6356</version>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.4</version>
-            </plugin>
-            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.12</version>
@@ -169,7 +160,7 @@
 
                     <execution>
                         <id>report</id>
-                        <phase>test</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
@@ -179,34 +170,27 @@
                             </formats>
                         </configuration>
                     </execution>
-
-                    <execution>
-                        <id>jacoco-check</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>LINE</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.80</minimum>
-                                        </limit>
-                                        <limit>
-                                            <counter>BRANCH</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.80</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
-                    </execution>
                 </executions>
+                <configuration>
+                    <failOnViolation>${jacoco.failOnViolation}</failOnViolation>
+                    <rules>
+                    <rule>
+                        <element>BUNDLE</element>
+                        <limits>
+                        <limit>
+                            <counter>LINE</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>0.80</minimum>
+                        </limit>
+                        <limit>
+                            <counter>BRANCH</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>0.80</minimum>
+                        </limit>
+                        </limits>
+                    </rule>
+                    </rules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
