--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -28,8 +28,11 @@ jobs:
         run: mvn -B clean verify
 
       - name: JaCoCo Coverage (min 80%)
+        id: jacoco
         continue-on-error: true
-        run: mvn -B jacoco:check -Djacoco.failOnViolation=true
+        run: |
+          mvn -B jacoco:check -Djacoco.failOnViolation=true
+          echo "exit_code=$?" >> $GITHUB_OUTPUT
 
       - name: SonarCloud Analysis
         env:
@@ -51,31 +54,26 @@ jobs:
           echo "🔍 Verificando coverage do PR #$PR_NUMBER..."
           sleep 10
 
-          # Busca status do Quality Gate
           RESPONSE=$(curl -s -u "$SONAR_TOKEN:" \
             "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${{ vars.SONAR_PROJECT_KEY }}&pullRequest=$PR_NUMBER")
 
-          # Extrai new_coverage
           NEW_COVERAGE=$(echo "$RESPONSE" | jq -r '
             .projectStatus.conditions[] 
             | select(.metricKey == "new_coverage") 
             | .actualValue
           ')
 
-          # Se não encontrou, ignora validação
           if [ -z "$NEW_COVERAGE" ] || [ "$NEW_COVERAGE" = "null" ]; then
             echo "⚠️  Métrica 'new_coverage' não disponível - ignorando validação"
             echo "::warning::New coverage não encontrado no SonarCloud"
             exit 0
           fi
 
-          # Formata para exibição
           COVERAGE=$(printf "%.2f" "$NEW_COVERAGE")
 
           echo "📊 New Coverage: $COVERAGE%"
           echo "🎯 Mínimo: $MIN_COVERAGE%"
 
-          # Valida threshold
           if (( $(echo "$COVERAGE >= $MIN_COVERAGE" | bc -l) )); then
             echo "✅ Coverage OK ($COVERAGE% >= $MIN_COVERAGE%)"
             exit 0
@@ -83,4 +81,15 @@ jobs:
             echo "❌ Coverage insuficiente ($COVERAGE% < $MIN_COVERAGE%)"
             echo "::error::New Coverage de $COVERAGE% está abaixo de $MIN_COVERAGE%"
             exit 1
+          fi
+
+      - name: Post JaCoCo Coverage
+        if: always()
+        run: |
+          if [ "${{ steps.jacoco.outputs.exit_code }}" != "0" ]; then
+            echo "::error title=Coverage abaixo do mínimo::O JaCoCo detectou cobertura insuficiente"
+            echo "❌ Coverage mínimo NÃO atingido"
+            exit 1
+          else
+            echo "✅ Coverage mínimo atingido"
           fi
