--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -1,45 +1,17 @@
 name: CI/CD - Build, Push Docker Image to ECR, and Deploy to EKS
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Quality Analysis"]
+    types:
+      - completed
+
   workflow_dispatch:
 
 jobs:
   build-push-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: lanchonete-app
-          IMAGE_TAG: latest
-        run: |
-          IMAGE_NAME=${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
-          docker build -t $IMAGE_NAME -f docker/Dockerfile .
-          docker push $IMAGE_NAME
-
-      - name: Update kubeconfig for EKS
-        run: |
-          aws eks --region us-east-1 update-kubeconfig --name fiap-lanchonete-eks
-
-      - name: Deploy to EKS
-        run: |
-          kubectl apply -f k8s/
+    uses: fiap-challenge-group-52/challenge-fiap-workflows/.github/workflows/build-push-ecr.yaml@feature/reusable-workflows
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
