--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-push-deploy:
-    uses: fiap-challenge-group-52/challenge-fiap-workflows/.github/workflows/build-push-ecr.yaml@feature/reusable-workflows
+    uses: fiap-challenge-group-52/challenge-fiap-workflows/.github/workflows/build-push-ecr.yaml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
