fix: correcao do docker build, encoding e limpeza de testes antigos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,23 @@
-version: '3.8'
-
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: lanchonete_mysql
-    restart: always
-    environment:
-      MYSQL_DATABASE: lanchonete
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+  mongodb:
+    image: mongo:latest
+    container_name: producao-mongo
     ports:
-      - "3306:3306"
+      - "27017:27017"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - mongo_data:/data/db
 
   app:
     build:
       context: .
-      dockerfile: docker/Dockerfile
-    container_name: lanchonete_app
-    restart: always
-    depends_on:
-      - mysql
+    container_name: producao-app
     ports:
-      - "8080:8080"
+      - "8082:8082"
+    depends_on:
+      - mongodb
     environment:
-      SPRING_DEVTOOLS_RESTART_ENABLED: "false"
-      MP_URL: "https://api.mercadopago.com/"
-      MP_ACCESS_TOKEN: "APP_USR-5776470819795291-052622-9d0e16330f82db26018b57af9f373d82-2461182756"
-      MP_USER_ID: "2461182756"
-      MP_EXTERNAL_POS_ID: "113730756"
-      MP_WEBHOOK: "http://54.165.29.101:8080/api/webhook/payment"
+      - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/fiap-producao-db
+      - SERVER_PORT=8082
 
 volumes:
-  mysql_data:
+  mongo_data:
