feat: listener SQS implementado com feature flag para rodar localmente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=producao-service
 spring.data.mongodb.uri=mongodb://localhost:27017/fiap-producao-db
 server.port=8082
+
+# AWS Config
+spring.cloud.aws.region.static=us-east-1
+
+# Feature Flags
+# Localmente fica false para não exigir credenciais da AWS
+app.sqs.enabled=false
