fix: Correcao do contexto de teste (placeholder) e ajustes no Listener

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,6 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.exclusions>**/pom.xml</sonar.exclusions>
-        <jacoco.failOnViolation>true</jacoco.failOnViolation>
     </properties>
 
     <dependencyManagement>
@@ -98,6 +97,7 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <proc>full</proc>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
