Add workflow_dispatch trigger to ECR workflow

--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -9,6 +9,8 @@ on:
     types:
       - completed
 
+  workflow_dispatch:
+
 jobs:
   build-push-deploy:
     uses: fiap-challenge-group-52/challenge-fiap-workflows/.github/workflows/build-push-ecr.yaml@main
@@ -16,8 +18,7 @@ jobs:
       github.event_name == 'workflow_dispatch' ||
       (
         github.event.workflow_run.conclusion == 'success' &&
-        github.event.workflow_run.event == 'push' &&
-        github.event.workflow_run.head_branch == 'master'
+        github.event.workflow_run.event == 'push'
       )
     with:
       ref: ${{ github.event.workflow_run.head_branch }}
