chore: setup swagger, fix sqs config and update docs
- Adicionada dependência springdoc-openapi no pom.xml
- Ajustado application.properties para suportar SQS dinâmico (Local vs Cloud)
- Removidos caracteres especiais do application.properties para corrigir erro de MalformedInputException no Maven
- Atualizado k8s/configmap.yaml com as variáveis de ambiente necessárias para o worker
- README.md reformulado com instruções de teste manual e endpoints da API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   app:
     build:
       context: .
+      dockerfile: docker/Dockerfile
     container_name: producao-app
     ports:
       - "8082:8082"
