--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -11,3 +11,5 @@ data:
   MP_EXTERNAL_POS_ID: "113730756"
   MP_WEBHOOK: "http://54.165.29.101:30080/api/webhook/payment"
   JWT_ISSUER: "https://cognito-idp.us-east-1.amazonaws.com/us-east-1_lKTrk2Wk0"
+  SQS_ENABLED: "true"
+  QUEUE_PEDIDO_PAGO: "pedidos-pago-queue"
