--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8082
 # AWS Config
 spring.cloud.aws.region.static=us-east-1
 
-# Feature Flags
-# Localmente fica false para não exigir credenciais da AWS
-app.sqs.enabled=false
+# SQS Configuration
+# Local: usa padrao false e fila mock. Cloud: Kubernetes injeta os valores reais.
+spring.cloud.aws.sqs.enabled=${SQS_ENABLED:false}
+events.queue.pedido-pago=${QUEUE_PEDIDO_PAGO:fila-local-mock}
