--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8082
 spring.cloud.aws.region.static=us-east-1
 
 # --- SQS Configuration ---
-# Local: padrão false. Produção: Kubernetes deve injetar SQS_ENABLED=true
+# Local: padrao false. Producao: Kubernetes deve injetar SQS_ENABLED=true
 spring.cloud.aws.sqs.enabled=${SQS_ENABLED:false}
 
 # Nome da fila (Igual ao criado no Terraform)
