--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,6 @@
-# --- Configuração do MongoDB Embutido (Testes) ---
-de.flapdoodle.mongodb.embedded.version=6.0.6
-
-# Desativa a tentativa de conexão com a AWS real (SQS)
+# Desativa SQS em testes
 spring.cloud.aws.sqs.enabled=false
 events.queue.pedido-pago=fila-mock
 
-# Configurações de Log para facilitar o debug
-logging.level.org.springframework.data.mongodb=INFO
-logging.level.de.flapdoodle=INFO
+# Define nome da tabela para testes
+aws.dynamodb.table-name=fiap-g37-tc3-pedidos
