Mudança mongoDB para DynamoDB

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,5 +2,12 @@
 spring.cloud.aws.sqs.enabled=false
 events.queue.pedido-pago=fila-mock
 
-# Define nome da tabela para testes
+# Configuração DynamoDB para Testes
+# Aponta para o container local (se existir) ou mock
 aws.dynamodb.table-name=fiap-g37-tc3-pedidos
+spring.cloud.aws.dynamodb.endpoint=http://localhost:8000
+spring.cloud.aws.region.static=us-east-1
+
+# Credenciais Dummy para evitar erro de "Missing Credentials" nos testes
+spring.cloud.aws.credentials.access-key=test
+spring.cloud.aws.credentials.secret-key=test
