atualizando de "lanchonete" para "producao"

--- a/k8s/deployment-api.yaml
+++ b/k8s/deployment-api.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lanchonete-app
+  name: producao-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: lanchonete_app
+      app: producao_app
   template:
     metadata:
       labels:
-        app: lanchonete_app
+        app: producao_app
     spec:
       containers:
         - name: api
-          image: 471112881043.dkr.ecr.us-east-1.amazonaws.com/lanchonete-app:latest
+          image: 471112881043.dkr.ecr.us-east-1.amazonaws.com/producao-app:latest
 
           imagePullPolicy: Always
 
