--- a/k8s/hpa.yaml
+++ b/k8s/hpa.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: lanchonete-app-hpa
+  name: producao-app-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: lanchonete-app
+    name: producao-app
   minReplicas: 2
   maxReplicas: 5
   metrics:
