--- a/k8s/service-api.yaml
+++ b/k8s/service-api.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lanchonete-api-service
+  name: producao-api-service
 spec:
   type: LoadBalancer
   selector:
-    app: lanchonete_app
+    app: producao_app
   ports:
     - port: 80
       targetPort: 8080
