adicionando integração com microsserviço de pedidos e configurando segurança com JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,15 @@ aws.dynamodb.table-name=fiap-g37-tc3-pedidos
 # --- SQS Configuration ---
 spring.cloud.aws.sqs.enabled=${SQS_ENABLED:false}
 events.queue.pedido-pago=${QUEUE_PEDIDO_PAGO:pedido-pago-queue}
+
+# --- Integração Microsserviço de Pedidos (AWS) ---
+# Endpoint que você mandou
+integration.pedidos.url=http://a41519341ee85460d8af7a1a3ad3250a-1349077277.us-east-1.elb.amazonaws.com
+
+# --- Segurança (Cognito) ---
+# Issuer usado para validar o token recebido
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_YYU3DzU7t
+
+# --- Credenciais AWS (Se rodar local fora do docker) ---
+spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID:}
+spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY:}
