add tests for PedidoPagoListener; validate message handling and error scenarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://cognito-idp.us-east
 # --- Credenciais AWS (Se rodar local fora do docker) ---
 spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID:}
 spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY:}
+spring.cloud.aws.credentials.session-token=${AWS_SESSION_TOKEN:}
