refactor: update application properties and configmap; adjust database port and add AWS region feat: enhance PedidoProducao and ProducaoController; add status setter and prioritize status logic

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -4,7 +4,9 @@ metadata:
   name: app-config
 data:
   DATABASE_HOST: fiap-g52-tc3-db-mysql.cj42ggik4jga.us-east-1.rds.amazonaws.com
-  DATABASE_PORT: "8082"
+  DATABASE_PORT: "3306"
   DATABASE_NAME: producao-service
+
   SQS_ENABLED: "true"
   QUEUE_PEDIDO_PAGO: "https://sqs.us-east-1.amazonaws.com/302039906417/pedido-pago-queue"
+  AWS_REGION: "us-east-1"
